- Updated license headers for year 2021 - Upgraded parent to 8.0.0 -> Upgrade to Java 11 (Java 8 no longer supported) - Maven plugin findbugs (obsolete) replaced with spotbugs